:heavy_plus_sign: Add player section

--- a/alpha-static/ma-landing.html
+++ b/alpha-static/ma-landing.html
@@ -19,7 +19,7 @@
     </button>
 
     <h2>How to Play</h2>
-    <div id="instructions">
+    <div id="instructions" class="box-gray">
       <p>Go to <b>thunk.fun</b> on your player device
         Enter room code and join the game</p>
     </div>
