--- a/alpha-static/ma-hostingInstructions.html
+++ b/alpha-static/ma-hostingInstructions.html
@@ -23,6 +23,7 @@
         <span class="pl-avi"></span>
         <p class="pl-name">Player 1</p>
       </div>
+
       <div id="player-2" class="player">
         <span class="pl-avi"></span>
         <p class="pl-name">Player 2</p>
@@ -31,27 +32,38 @@
         <span class="pl-avi"></span>
         <p class="pl-name">Player 3</p>
       </div>
+
       <div id="player-4" class="player">
         <span class="pl-avi"></span>
         <p class="pl-name">Player 4</p>
       </div>
+
       <div id="player-5" class="player">
         <span class="pl-avi"></span>
         <p class="pl-name">Player 5</p>
       </div>
+
       <div id="player-6" class="player">
         <span class="pl-avi"></span>
         <p class="pl-name">Player 6</p>
       </div>
+
       <div id="player-7" class="player">
         <span class="pl-avi"></span>
         <p class="pl-name">Player 7</p>
       </div>
+
       <div id="player-8" class="player">
         <span class="pl-avi"></span>
         <p class="pl-name">Player 8</p>
       </div>
-    </div>
+    </div> <!-- End Connected Players -->
+
+    <button>
+      <p>Start Game</p>
+    </button>
+
+    <h3>Go to <b>thunk.fun</b> on your player device</h3>
   </main>
 
   <div id="tempNav">
