--- a/alpha-static/ma-hostingInstructions.html
+++ b/alpha-static/ma-hostingInstructions.html
@@ -66,6 +66,7 @@
     <h3>Go to <b>thunk.fun</b> on your player device</h3>
   </main>
 
+  <!-- ! Just for static alpha. Remove once functional alpha is built -->
   <div id="tempNav">
     <h3>Temporary Navigation</h3>
 
@@ -151,6 +152,7 @@
       <p>Error</p>
     </a>
   </div>
+  <!-- ! --------------------------------------------------- -->
   <!-- Joots -->
 </body>
 
