--- a/alpha-static/ma-landing.html
+++ b/alpha-static/ma-landing.html
@@ -25,6 +25,7 @@
     </div>
   </main>
 
+  <!-- ! Just for static alpha. Remove once functional alpha is built -->
   <div id="tempNav">
     <h3>Temporary Navigation</h3>
 
@@ -110,6 +111,7 @@
       <p>Error</p>
     </a>
   </div>
+  <!-- ! --------------------------------------------------- -->
   <!-- Jirt -->
 </body>
 
