--- a/alpha-static/ma-splash.html
+++ b/alpha-static/ma-splash.html
@@ -16,6 +16,7 @@
     <h1>Thunk</h1>
   </div>
 
+  <!-- ! Just for static alpha. Remove once functional alpha is built -->
   <div id="tempNav">
     <h3>Temporary Navigation</h3>
 
@@ -101,6 +102,7 @@
       <p>Error</p>
     </a>
   </div>
+  <!-- ! --------------------------------------------------- -->
   <!-- Jorts -->
 </body>
 
