--- a/alpha-static/ma-roundStart.html
+++ b/alpha-static/ma-roundStart.html
@@ -13,17 +13,14 @@
 
 <body>
   <main>
-    <h1>Thunk</h1>
-    <button>
-      <p>Play</p>
-    </button>
-
-    <h2>How to Play</h2>
-    <div id="instructions">
-      <p>Go to <b>thunk.fun</b> on your player device
-        Enter room code and join the game</p>
+    <h1>Welcome to Thunk!</h1>
+    <h2>Please review the instructions on your devices.</h2>
+    <div id="code-fixed" class="box-gray">
+      <p>Room</p>
+      <p><span id="room-num">123 456</span></p>
     </div>
   </main>
+
 
   <!-- ! Just for static alpha. Remove once functional alpha is built -->
   <div id="tempNav">
