:art: Update prompt screen styles
ma-prompt.html
- Add .box-gray to #timer

main-alpha.css
- Add styles for ma-prompt elements

--- a/alpha-static/ma-prompt.html
+++ b/alpha-static/ma-prompt.html
@@ -21,10 +21,10 @@
       <p>Type as many responses as you can in 30 seconds</p>
     </div>
     <div id="switch-up">
-      <h3>BUT</h3>
+      <h3>But</h3>
       <p>Every answer must include the word "cow"</p>
     </div>
-    <div id="timer"><span id="timer-bar"></span></div>
+    <div id="timer" class="box-gray"><span id="timer-bar"></span></div>
     <div id="code-fixed" class="box-gray">
       <p>Room</p>
       <p><span id="room-num">123 456</span></p>
