Update to comments

--- a/alpha-static/ma-judging.html
+++ b/alpha-static/ma-judging.html
@@ -163,7 +163,7 @@
     </a>
   </div>
   <!-- ! --------------------------------------------------- -->
-  <!-- Joots -->
+  <!-- Jarf -->
 </body>
 
 </html>
