--- a/alpha-static/ma-prompt.html
+++ b/alpha-static/ma-prompt.html
@@ -119,7 +119,7 @@
     </a>
   </div>
   <!-- ! --------------------------------------------------- -->
-  <!-- Joots -->
+  <!-- Jat -->
 </body>
 
 </html>
