Fix page name error
Changed "error screen" to "launch"

--- a/alpha-static/ma-judging.html
+++ b/alpha-static/ma-judging.html
@@ -120,7 +120,7 @@
 
     <h4>Player</h4>
     <a href="pl-launch.html">
-      <p>Error Screen</p>
+      <p>Launch</p>
     </a>
     <a href="pl-avatar.html">
       <p>Avatar Selection</p>
