--- a/alpha-static/ma-topAnswer.html
+++ b/alpha-static/ma-topAnswer.html
@@ -75,7 +75,7 @@
 
     <h4>Player</h4>
     <a href="pl-launch.html">
-      <p>Error Screen</p>
+      <p>Launch</p>
     </a>
     <a href="pl-avatar.html">
       <p>Avatar Selection</p>
