--- a/alpha-static/ma-prompt.html
+++ b/alpha-static/ma-prompt.html
@@ -76,7 +76,7 @@
 
     <h4>Player</h4>
     <a href="pl-launch.html">
-      <p>Launc</p>
+      <p>Launch</p>
     </a>
     <a href="pl-avatar.html">
       <p>Avatar Selection</p>
