:sparkles: Add alpha static player screens
Fully styled launch, avatar (including selection state), wait screen, and instructions.

--- a/alpha-static/pl-avatar.html
+++ b/alpha-static/pl-avatar.html
@@ -13,23 +13,59 @@
 
 <body>
   <main>
-    <h1>Thunk</h1>
+    <h2>Pick Your Avatar</h2>
     <form action="">
-      <div class="input-wrap">
-        <label for="rm-code">
-          <h2>Room Code</h2>
+      <div id="avi-grid">
+        <label for="avi-red" class="avi-opt avi-opt-1">
+          <input type="radio" name="avi-sel" id="avi-red">
+          <span class="avi-check"></span>
         </label>
-        <input type="text" name="rm-code" id="rm-code">
-      </div>
-      <div class="input-wrap">
-        <label for="pl-nick">
-          <h2>
-            Nickname
-          </h2>
+        <label for="avi-orange" class="avi-opt avi-opt-2">
+          <input type="radio" name="avi-sel" id="avi-orange">
+          <span class="avi-check"></span>
         </label>
-        <input type="text" name="pl-nick" id="pl-nick" class="tootip">
+        <label for="avi-yellow" class="avi-opt avi-opt-3">
+          <input type="radio" name="avi-sel" id="avi-yellow">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-green" class="avi-opt avi-opt-4">
+          <input type="radio" name="avi-sel" id="avi-green">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-blue" class="avi-opt avi-opt-5">
+          <input type="radio" name="avi-sel" id="avi-blue">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-mediumBlue" class="avi-opt avi-opt-6">
+          <input type="radio" name="avi-sel" id="avi-mediumBlue">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-lightGreen" class="avi-opt avi-opt-7">
+          <input type="radio" name="avi-sel" id="avi-lightGreen">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-purple" class="avi-opt avi-opt-8">
+          <input type="radio" name="avi-sel" id="avi-purple">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-magenta" class="avi-opt avi-opt-9">
+          <input type="radio" name="avi-sel" id="avi-magenta">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-teal" class="avi-opt avi-opt-10">
+          <input type="radio" name="avi-sel" id="avi-teal">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-lime" class="avi-opt avi-opt-11">
+          <input type="radio" name="avi-sel" id="avi-lime">
+          <span class="avi-check"></span>
+        </label>
+        <label for="avi-violet" class="avi-opt avi-opt-12">
+          <input type="radio" name="avi-sel" id="avi-violet">
+          <span class="avi-check"></span>
+        </label>
       </div>
-      <input type="submit" value="Play Game">
+      <input type="submit" value="Confirm" class="pl-submit">
     </form>
   </main>
 
