--- a/alpha-static/pl-instructions.html
+++ b/alpha-static/pl-instructions.html
@@ -13,24 +13,15 @@
 
 <body>
   <main>
-    <h1>Thunk</h1>
-    <form action="">
-      <div class="input-wrap">
-        <label for="rm-code">
-          <h2>Room Code</h2>
-        </label>
-        <input type="text" name="rm-code" id="rm-code">
-      </div>
-      <div class="input-wrap">
-        <label for="pl-nick">
-          <h2>
-            Nickname
-          </h2>
-        </label>
-        <input type="text" name="pl-nick" id="pl-nick" class="tootip">
-      </div>
-      <input type="submit" value="Play Game">
-    </form>
+    <h4>This Round Is:</h4>
+    <h2 class="box-gray">Think Twice</h2>
+    <h4>Round Instructions</h4>
+    <ol id="pl-instructions">
+      <li>Type in whatever association you can make with the prompts.</li>
+      <li>Relate it to a unique switch-up in every round!</li>
+      <li>Select your top 2 answers for voting.</li>
+      <li>Thunk those good thonks &amp; have fun!</li>
+    </ol>
   </main>
 
   <!-- ! Just for static alpha. Remove once functional alpha is built -->
