--- a/alpha-static/pl-waitStart.html
+++ b/alpha-static/pl-waitStart.html
@@ -13,24 +13,8 @@
 
 <body>
   <main>
-    <h1>Thunk</h1>
-    <form action="">
-      <div class="input-wrap">
-        <label for="rm-code">
-          <h2>Room Code</h2>
-        </label>
-        <input type="text" name="rm-code" id="rm-code">
-      </div>
-      <div class="input-wrap">
-        <label for="pl-nick">
-          <h2>
-            Nickname
-          </h2>
-        </label>
-        <input type="text" name="pl-nick" id="pl-nick" class="tootip">
-      </div>
-      <input type="submit" value="Play Game">
-    </form>
+    <h2>Waiting for players to join...</h2>
+    <input type="submit" value="Start Game" class="pl-submit">
   </main>
 
   <!-- ! Just for static alpha. Remove once functional alpha is built -->
