💄 Change syntax to "advance to" to make socket emits read better

--- a/html/landing.html
+++ b/html/landing.html
@@ -102,7 +102,7 @@
                 })
             }
 
-            socket.on('advance: join form', (data) => {
+            socket.on('advance to: join form', (data) => {
                 console.log(data);
             })
 
